Logging level usage

--- a/testapiproject/appsettings.json
+++ b/testapiproject/appsettings.json
@@ -3,7 +3,19 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    },
+    "Debug": {
+      "LogLevel": {
+        "Default": "Error",
+        "Microsoft.Hosting": "Trace"
+      }
+    },
+    "Console": {
+      "LogLevel": {
+        "Default": "Error",
+        "Microsoft.Hosting": "Error"
+      }
+    },
+    "AllowedHosts": "*"
+  }
 }
