log4net  file appender with different rolling style

--- a/testapiproject/log4net.config
+++ b/testapiproject/log4net.config
@@ -12,10 +12,22 @@
     </layout>
   </appender>
 
+  <appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
+    <file value="/workspaces/sudhir-API-dotnetCore-1-0324/testapiproject/logs/log.txt" />
+    <!-- <rollingStyle value="Once" /> -->
+    <rollingStyle value="Composite" />
+    <maximumFileSize value="1KB" />
+    <maxSizeRollBackups value="2" /> 
+    <layout type="log4net.Layout.PatternLayout">
+      <ConversionPattern value="%date  %5level %logger.%method [%line] -MESSAGE: %message%newline" />
+    </layout>
+  </appender>
+
   <root>
     <level value="ALL" /> <!--All
     here specifies the level of log-->
     <appender-ref ref="DebugAppender" />
     <appender-ref ref="ConsoleAppender" />
+    <appender-ref ref="RollingFile" />
   </root>
 </log4net>
